# krx-dynamic-portfolio

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  performance_summary.py  pyproject.toml  requirements.txt  test_performance.py  test_real_data.py  test_real_optimization.py
.github/workflows/: ci.yml
configs/: portfolio.yaml
docs/: README.md  backtesting_guide.md  dashboard_api.md  dashboard_backend_integration_summary.md  dashboard_guide.md  etl_api.md  etl_usage_guide.md  final_project_completion_report.md  known_issues.md  performance_optimization_guide.md  portfolio_api.md  portfolio_optimization_guide.md  project_status_summary.md  troubleshooting.md
krx_portfolio/: __init__.py  utils.py
krx_portfolio/app/: __init__.py  backend_integration.py  chart_optimizations.py  dashboard.py  data_integration.py  performance_optimizations.py
krx_portfolio/app/components/: __init__.py  charts.py  data_components.py  portfolio_components.py
krx_portfolio/backtesting/: __init__.py  engine.py  main.py  metrics.py  risk_analytics.py
krx_portfolio/etl/: __init__.py  data_loader.py  main.py  preprocessor.py
krx_portfolio/models/: __init__.py  mpt.py  pipeline.py  rebalance.py  risk.py
tests/: conftest.py  test_backtest_engine.py  test_backtesting_main.py  test_data_loader.py  test_etl_pipeline.py  test_mpt.py  test_performance_metrics.py  test_pipeline.py  test_preprocessor.py  test_rebalance.py  test_risk.py  test_risk_analytics.py
